force-app/main/default/objects/Budget_Academic_Costs__c.object
<CustomObject>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Type__c</fullName>
        <label>Cost Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Materials</fullName>
                </value>
                <value>
                    <fullName>Printing</fullName>
                </value>
                <value>
                    <fullName>Staff Recruitment</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Trips</fullName>
                </value>
                <value>
                    <fullName>Special Programmes</fullName>
                </value>
                <value>
                    <fullName>Exams</fullName>
                </value>
                <value>
                    <fullName>After School Activities</fullName>
                </value>
                <value>
                    <fullName>School Events</fullName>
                </value>
                <value>
                    <fullName>SEN Support</fullName>
                </value>
                <value>
                    <fullName>Head&apos;s Fund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_for_School__c</fullName>
        <label>Cost for School</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>School_Budget__c</fullName>
        <label>School Budget</label>
        <referenceTo>School_Budget__c</referenceTo>
        <relationshipLabel>Budget - Academic Costs</relationshipLabel>
        <relationshipName>Budget_Academic_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Budget - Academic Costs</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget - Academic Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Locked</fullName>
        <active>true</active>
        <description>Prevents New or Edits if the budget is Locked</description>
        <errorConditionFormula>TEXT(School_Budget__r.Locked__c) =&quot;Yes&quot;</errorConditionFormula>
        <errorMessage>This School Budget is Locked. Please contact the Group Administrator for Details</errorMessage>
    </validationRules>
</CustomObject>